CSS: Prevent default <td> style distorts chroma code blocks

--- a/static/css/table.css
+++ b/static/css/table.css
@@ -31,7 +31,7 @@ td {
     padding: .2em 1em;
 }
 
-th, td {
+th, td:not(.lntd) {
     word-break: keep-all;
     white-space: pre;
 }
